samples/_failures_safe/1761090352_bb24ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5d8f1c5.c: In function ‘main’:
./samples/SAFE/__tmp_f5d8f1c5.c:155:21: error: expected expression at end of input
  155 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_f5d8f1c5.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5d8f1c5.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5d8f1c5.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5d8f1c5.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5d8f1c5.c:155:21: error: expected declaration or statement at end of input
